Beautify docs
