# internal/services/gateway/api/v1/payout.go
@@ -29,17 +29,12 @@ type payoutMethodsResponse struct {
 //	@Summary	Получить список способов для вывода средств
 //	@Tags		Выплаты
 //	@Produce	json
-//
 //	@Security	ApiKeyAuth
-//
-//	@Param		Authorization	header		string					true	"Authorization"
-//
-//	@Param		user_id			query		int						true	"Идентификатор клиента"
-//	@Param		currency		query		string					true	"Валюта выплаты в соответствии со стандартом ISO 4217"
-//	@Param		lang_code		query		string					true	"Код языка, обозначение по RFC 5646"
-//
-//	@Success	200				{object}	payoutMethodsResponse	"Успешный ответ"
-//	@Failure	default			{object}	errorResponse			"Ответ с ошибкой"
+//	@Param		user_id		query		int						true	"Идентификатор клиента"
+//	@Param		currency	query		string					true	"Валюта выплаты в соответствии со стандартом ISO 4217"
+//	@Param		lang_code	query		string					true	"Код языка, обозначение по RFC 5646"
+//	@Success	200			{object}	payoutMethodsResponse	"Успешный ответ"
+//	@Failure	default		{object}	errorResponse			"Ответ с ошибкой"
 //	@Router		/payout/methods [get]
 func (h *Handler) payoutMethods(c *fiber.Ctx) error {
 	ctx := context.Background()
@@ -101,51 +96,15 @@ type payoutCreateResponse struct {
 //	@Tags		Выплаты
 //	@Accept		json
 //	@Produce	json
-//
 //	@Security	ApiKeyAuth
-//
-//	@Param		Authorization	header		string					true	"Authorization"
-//	@Param		input			body		payoutCreateRequest		true	"Тело запроса"
-//	@Success	200				{object}	payoutCreateResponse	"Успешный ответ"
-//	@Failure	default			{object}	errorResponse			"Ответ с ошибкой"
+//	@Param		input	body		payoutCreateRequest		true	"Тело запроса"
+//	@Success	200		{object}	payoutCreateResponse	"Успешный ответ"
+//	@Failure	default	{object}	errorResponse			"Ответ с ошибкой"
 //	@Router		/payout/create [post]
 func (h *Handler) payoutCreate(c *fiber.Ctx) error {
 	return c.SendString("Payout created")
 }
 
-type payoutConfirmRequest struct {
-	// Идентификатор клиента
-	UserID int64 `json:"user_id" example:"11431" validate:"required"`
-	// Код языка, обозначение по RFC 5646
-	LangCode string `json:"lang_code" example:"en" validate:"required"`
-	// Код подтверждения выплаты
-	ConfirmationCode string `json:"confirmation_code" example:"123144" validate:"required"`
-}
-
-type payoutConfirmResponse struct {
-	// Результат обработки запроса (всегда true)
-	Success bool `json:"success" example:"true" validate:"required"`
-	// Идентификатор созданной выплаты
-	OperationID int64 `json:"operation_id" example:"102492" validate:"required"`
-}
-
-// payoutConfirm godoc
-//
-//	@Summary	Подтвердить вывод средств
-//	@Tags		Выплаты
-//	@Accept		json
-//	@Produce	json
-//
-//	@Security	ApiKeyAuth
-//
-//	@Param		Authorization	header		string					true	"Authorization"
-//
-//	@Param		id				path		int						true	"Идентификатор выплаты"
-//
-//	@Param		input			body		payoutConfirmRequest	true	"Тело запроса"
-//	@Success	200				{object}	payoutConfirmResponse	"Успешный ответ"
-//	@Failure	default			{object}	errorResponse			"Ответ с ошибкой"
-//	@Router		/payout/{id}/confirm [post]
 func (h *Handler) payoutConfirm(c *fiber.Ctx) error {
 	return c.SendString("Payout confirmed")
 }
